--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,3 +1,3 @@
 test('solver', executable('solver-test', 'solver-test.vala',
                           dependencies: [glib, gobject],
-                          link_with: solver_lib))
+                          link_with: [solver_lib, mt19937_lib]))
