Process challenges from the CA
 - support cancellation for the current challenge
 - generate 'args' for WebSocket requests

--- a/meson.build
+++ b/meson.build
@@ -6,13 +6,14 @@ add_project_arguments('--vapidir=' + meson.current_source_dir(), language: 'vala
 posix = meson.get_compiler('vala').find_library('posix')
 glib = dependency('glib-2.0')
 gobject = dependency('gobject-2.0')
+gio = dependency('gio-2.0')
 gomp = meson.get_compiler('c').find_library('gomp')
 soup = dependency('libsoup-2.4')
 json_glib = dependency('json-glib-1.0')
 openssl = dependency('openssl')
 
 solver_lib = library('cscoin-solver', 'cscoin-solver.c', 'cscoin-mt64.c',
-                     dependencies: [glib, gomp, openssl])
+                     dependencies: [glib, gio, gomp, openssl])
 
 executable('cscoin-miner', 'cscoin-miner.vala',
            dependencies: [posix, glib, gobject, soup, json_glib, openssl],
