--- a/benchmarks/meson.build
+++ b/benchmarks/meson.build
@@ -1,3 +1,3 @@
 benchmark('solver', executable('solver-benchmark', 'solver-benchmark.vala',
-                     dependencies: [glib, gobject],
+                     dependencies: [glib, gobject, gio],
                      link_with: solver_lib))
