--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,3 +1,3 @@
 test('solver', executable('solver-test', 'solver-test.vala',
-                          dependencies: [glib, gobject],
+                          dependencies: [glib, gobject, gio],
                           link_with: [solver_lib, mt19937_lib]))
