Properly declare the solver API in a binding

--- a/benchmarks/meson.build
+++ b/benchmarks/meson.build
@@ -1,3 +1,2 @@
 benchmark('solver', executable('solver-benchmark', 'solver-benchmark.vala',
-                     dependencies: [glib, gobject, gio],
-                     link_with: solver_lib))
+                     dependencies: [glib, gobject, gio, solver, solver_vapi]))
