Load, register and use the wallet for submissions

--- a/meson.build
+++ b/meson.build
@@ -17,7 +17,7 @@ solver_lib = library('cscoin-solver', 'cscoin-solver.c', 'cscoin-mt64.c', 'cscoi
 solver = declare_dependency(link_with: solver_lib, include_directories: include_directories('.'))
 solver_vapi = meson.get_compiler('vala').find_library('cscoin-solver', dirs: meson.current_source_dir())
 
-executable('cscoin-miner', 'cscoin-miner.vala', 'cscoin-challenge.vala',
+executable('cscoin-miner', 'cscoin-miner.vala', 'cscoin-challenge.vala', 'cscoin-wallet.vala',
            dependencies: [posix, glib, gobject, soup, json_glib, openssl, solver, solver_vapi])
 
 subdir('contrib/mt19937-64')
