--- a/meson.build
+++ b/meson.build
@@ -12,14 +12,16 @@ soup = dependency('libsoup-2.4', version: '>=2.50')
 json_glib = dependency('json-glib-1.0')
 openssl = dependency('openssl')
 
+subdir('contrib/mt19937-64')
+subdir('contrib/libastar')
+
 solver_lib = library('cscoin-solver', 'cscoin-solver.c', 'cscoin-mt64.c', 'cscoin-challenge-type.c', 'cscoin-challenge-parameters.c',
-                     dependencies: [glib, gio, gomp, openssl])
+                     dependencies: [glib, gio, gomp, openssl, libastar])
 solver = declare_dependency(link_with: solver_lib, include_directories: include_directories('.'))
 solver_vapi = meson.get_compiler('vala').find_library('cscoin-solver', dirs: meson.current_source_dir())
 
 executable('cscoin-miner', 'cscoin-miner.vala', 'cscoin-challenge.vala', 'cscoin-wallet.vala',
            dependencies: [posix, glib, gobject, soup, json_glib, openssl, solver, solver_vapi])
 
-subdir('contrib/mt19937-64')
 subdir('benchmarks')
 subdir('tests')
